deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-thymeleaf
  name: spring-thymeleaf
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-thymeleaf
  template:
    metadata:
      labels:
        app: spring-thymeleaf
    spec:
      containers:
      - image: jptamayo76/spring-thymeleaf:latest
        imagePullPolicy: IfNotPresent
        name: spring-thymeleaf
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
